# mura

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/mura/: __init__.py  checkpointing.py  experiment.py  lightning.py  metrics.py  registry.py  train.py
src/mura/deploy/: deploy_action.py  run.py  set_gpu.py  util.py
src/mura/draw/: color.py
src/mura/hydra/: __init__.py  cache.py  callbacks.py  logger.py  resolvers.py  trainer.py
src/mura/repo/: git_utils.py
src/mura/services/: service_tmux.py
src/mura/templates/: run.jinja  sg_env_init.jinja  templates.py
tests/: test_phase0_additions.py
