[metadata]
name = mura
version = 0.2.0
author = Akhil Sadam
author_email = sadam.akhil@gmail.com
description = WandB, Git, and run-table integration for ML++ / eliminating workflow unevenness
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls = 
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    numpy
    lightning
    torch
    einops
    tqdm
    matplotlib
    wandb
    gitpython
    logging
    pyyaml

[options.packages.find]
where = src

[build-system]
requires = [
    "uv>=0.7.20",
    "setuptools",
]